--- a/README.Rmd
+++ b/README.Rmd
@@ -246,7 +246,7 @@ plot(wspmu_smoothed)
 
 There you notice the seasonality and upward moving trend. Autocorrelation `stats::acf` gives us a clearer understanding. When data have a trend, the autocorrelations for small lags tend to be large and positive. When data are seasonal, the autocorrelations will be larger for the seasonal lags (at multiples of the seasonal frequency) than for other lags.
 
-The blue lines incidicates ±2/√T, representing white noise.
+The blue lines incidicates ±2/√T, where T is the length of series, representing white noise.
 
 ```{r}
 forecast::ggAcf(wspmu) + labs(title = "Correlogram - Windspeed")
